--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "style-loader": "^1.0.0",
-    "typescript": "~3.5.3",
+    "typescript": "^3.5.3",
     "vue-template-compiler": "^2.6.10"
   }
 }
