--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuedraggable": "^2.23.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
